# apart_backend

./: .env.example  .gitignore  README.md  data_base.json  main.py  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
.github/workflows/: deploy.yml
activities/: admin.py  apps.py  forms.py  serializers.py  services.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_activity_module_alter_useranswer_user.py  0003_examactivity_alter_activity_options_and_more.py  0004_useranswer_exam_attempt_and_more.py
activities/models/: base.py  choice.py  fill_in_the_blank.py  matching.py  multiple_choice.py  word_ordering.py
activities/serializers/: base.py  choice.py  fill_in_the_blank.py  matching.py  unified.py  word_ordering.py
alembic/: env.py
alembic/versions/: 488faa52483e_load_users_dummy_data.py  f95d13e53aaf_initial_user_table.py
apart/: admin.py  asgi.py  settings.py  urls.py  urls_api.py  wsgi.py
apart_backend/: asgi.py  settings.py  urls.py  wsgi.py
app/: main.py
content/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
languages/: admin.py  models.py  serializers.py
people/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
security/: exceptions.py  serializers.py  services.py  tests.py  urls.py  views.py
strategies/: factory.py  serializers.py  urls.py  views.py
subscriptions/: admin.py  models.py  tests.py
user_auth/: models.py
users/: backends.py  models.py
utils/: enums.py  module_loader.py
(+53 files in other folders)
