[project]
name = "apart-rest-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "django-rest-knox>=5.0.2",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "asgiref>=3.8.1",
    "sqlparse>=0.5.3",
    "psycopg2>=2.9.10",
]
